crates/pg_syntax/tests/snapshots/postgres_regress/union@13.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 1.0::float8 AS two UNION ALL SELECT 1 ORDER BY 1;"
---
SelectStmt@0..56
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..25
    ResTarget@7..25
      TypeCast@7..18
        AConst@7..10
          Fconst@7..10 "1.0"
        Typecast@10..12 "::"
        TypeName@12..18
          Ident@12..18 "float8"
      Whitespace@18..19 " "
      As@19..21 "AS"
      Whitespace@21..22 " "
      Ident@22..25 "two"
  Whitespace@25..26 " "
  Union@26..31 "UNION"
  Whitespace@31..32 " "
  All@32..35 "ALL"
  Whitespace@35..36 " "
  SelectStmt@36..44
    Select@36..42 "SELECT"
    Whitespace@42..43 " "
    ResTarget@43..44
      AConst@43..44
        Iconst@43..44 "1"
  Whitespace@44..45 " "
  SortBy@45..55
    Order@45..50 "ORDER"
    Whitespace@50..51 " "
    By@51..53 "BY"
    Whitespace@53..54 " "
    AConst@54..55
      Iconst@54..55 "1"
  Ascii59@55..56 ";"

