crates/pg_syntax/tests/snapshots/postgres_regress/union@130.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select from generate_series(1,5) intersect all select from generate_series(1,3);"
---
SelectStmt@0..80
  Select@0..6 "select"
  Whitespace@6..7 " "
  SelectStmt@7..31
    From@7..11 "from"
    Whitespace@11..12 " "
    RangeFunction@12..31
      List@12..31
        FuncCall@12..31
          Ident@12..27 "generate_series"
          Ascii40@27..28 "("
          AConst@28..29
            Iconst@28..29 "1"
          Ascii44@29..30 ","
          AConst@30..31
            Iconst@30..31 "5"
  Ascii41@31..32 ")"
  Whitespace@32..33 " "
  Intersect@33..42 "intersect"
  Whitespace@42..43 " "
  All@43..46 "all"
  Whitespace@46..47 " "
  SelectStmt@47..78
    Select@47..53 "select"
    Whitespace@53..54 " "
    From@54..58 "from"
    Whitespace@58..59 " "
    RangeFunction@59..78
      List@59..78
        FuncCall@59..78
          Ident@59..74 "generate_series"
          Ascii40@74..75 "("
          AConst@75..76
            Iconst@75..76 "1"
          Ascii44@76..77 ","
          AConst@77..78
            Iconst@77..78 "3"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

