crates/pg_syntax/tests/snapshots/postgres_regress/union@132.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select from generate_series(1,5) except all select from generate_series(1,3);"
---
SelectStmt@0..77
  Select@0..6 "select"
  Whitespace@6..7 " "
  SelectStmt@7..31
    From@7..11 "from"
    Whitespace@11..12 " "
    RangeFunction@12..31
      List@12..31
        FuncCall@12..31
          Ident@12..27 "generate_series"
          Ascii40@27..28 "("
          AConst@28..29
            Iconst@28..29 "1"
          Ascii44@29..30 ","
          AConst@30..31
            Iconst@30..31 "5"
  Ascii41@31..32 ")"
  Whitespace@32..33 " "
  Except@33..39 "except"
  Whitespace@39..40 " "
  All@40..43 "all"
  Whitespace@43..44 " "
  SelectStmt@44..75
    Select@44..50 "select"
    Whitespace@50..51 " "
    From@51..55 "from"
    Whitespace@55..56 " "
    RangeFunction@56..75
      List@56..75
        FuncCall@56..75
          Ident@56..71 "generate_series"
          Ascii40@71..72 "("
          AConst@72..73
            Iconst@72..73 "1"
          Ascii44@73..74 ","
          AConst@74..75
            Iconst@74..75 "3"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

