crates/pg_syntax/tests/snapshots/postgres_regress/union@138.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX t1_ab_idx on t1 ((a || b));
---
IndexStmt@0..40
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..22 "t1_ab_idx"
  Whitespace@22..23 " "
  On@23..25 "on"
  Whitespace@25..26 " "
  RangeVar@26..28
    Ident@26..28 "t1"
  Whitespace@28..29 " "
  Ascii40@29..30 "("
  Ascii40@30..31 "("
  IndexElem@31..37
    AExpr@31..37
      ColumnRef@31..32
        Ident@31..32 "a"
      Whitespace@32..33 " "
      Op@33..35 "||"
      Whitespace@35..36 " "
      ColumnRef@36..37
        Ident@36..37 "b"
  Ascii41@37..38 ")"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

