crates/pg_syntax/tests/snapshots/postgres_regress/union@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT 1.1 AS three UNION SELECT 2 UNION SELECT 3 ORDER BY 1;
---
SelectStmt@0..61
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..34
    SelectStmt@7..19
      ResTarget@7..19
        AConst@7..10
          Fconst@7..10 "1.1"
        Whitespace@10..11 " "
        As@11..13 "AS"
        Whitespace@13..14 " "
        Ident@14..19 "three"
    Whitespace@19..20 " "
    Union@20..25 "UNION"
    Whitespace@25..26 " "
    Select@26..32 "SELECT"
    Whitespace@32..33 " "
    SelectStmt@33..34
      ResTarget@33..34
        AConst@33..34
          Iconst@33..34 "2"
  Whitespace@34..35 " "
  Union@35..40 "UNION"
  Whitespace@40..41 " "
  SelectStmt@41..49
    Select@41..47 "SELECT"
    Whitespace@47..48 " "
    ResTarget@48..49
      AConst@48..49
        Iconst@48..49 "3"
  Whitespace@49..50 " "
  SortBy@50..60
    Order@50..55 "ORDER"
    Whitespace@55..56 " "
    By@56..58 "BY"
    Whitespace@58..59 " "
    AConst@59..60
      Iconst@59..60 "1"
  Ascii59@60..61 ";"

