crates/pg_syntax/tests/snapshots/postgres_regress/union@140.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO t1 VALUES ('a', 'b'), ('x', 'y');"
---
InsertStmt@0..45
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "t1"
  Whitespace@14..15 " "
  SelectStmt@15..43
    Values@15..21 "VALUES"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..31
      AConst@23..26
        Sconst@23..26 "'a'"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..31
        Sconst@28..31 "'b'"
    Ascii41@31..32 ")"
    Ascii44@32..33 ","
    Whitespace@33..34 " "
    Ascii40@34..35 "("
    List@35..43
      AConst@35..38
        Sconst@35..38 "'x'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..43
        Sconst@40..43 "'y'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

