crates/pg_syntax/tests/snapshots/postgres_regress/union@141.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO t2 VALUES ('ab'), ('xy');"
---
InsertStmt@0..37
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "t2"
  Whitespace@14..15 " "
  SelectStmt@15..35
    Values@15..21 "VALUES"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..27
      AConst@23..27
        Sconst@23..27 "'ab'"
    Ascii41@27..28 ")"
    Ascii44@28..29 ","
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..35
      AConst@31..35
        Sconst@31..35 "'xy'"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

