crates/pg_syntax/tests/snapshots/postgres_regress/union@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 1.1::float8 AS two UNION SELECT 2 UNION SELECT 2.0::float8 ORDER BY 1;"
---
SelectStmt@0..77
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..40
    SelectStmt@7..25
      ResTarget@7..25
        TypeCast@7..18
          AConst@7..10
            Fconst@7..10 "1.1"
          Typecast@10..12 "::"
          TypeName@12..18
            Ident@12..18 "float8"
        Whitespace@18..19 " "
        As@19..21 "AS"
        Whitespace@21..22 " "
        Ident@22..25 "two"
    Whitespace@25..26 " "
    Union@26..31 "UNION"
    Whitespace@31..32 " "
    Select@32..38 "SELECT"
    Whitespace@38..39 " "
    SelectStmt@39..40
      ResTarget@39..40
        AConst@39..40
          Iconst@39..40 "2"
  Whitespace@40..41 " "
  Union@41..46 "UNION"
  Whitespace@46..47 " "
  SelectStmt@47..65
    Select@47..53 "SELECT"
    Whitespace@53..54 " "
    ResTarget@54..65
      TypeCast@54..65
        AConst@54..57
          Fconst@54..57 "2.0"
        Typecast@57..59 "::"
        TypeName@59..65
          Ident@59..65 "float8"
  Whitespace@65..66 " "
  SortBy@66..76
    Order@66..71 "ORDER"
    Whitespace@71..72 " "
    By@72..74 "BY"
    Whitespace@74..75 " "
    AConst@75..76
      Iconst@75..76 "1"
  Ascii59@76..77 ";"

